# pybackpack

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
pybackpack/: commands.py
pybackpack/ai/genai/: formatters.py  schema.py
pybackpack/cryptography/: secrets.py
pybackpack/datastores/: redis.py
pybackpack/os/: __init__.py  core.py  shell.py
pybackpack/text/: template.py
tests/: conftest.py  test_commands.py
tests/test_ai/test_genai/: test_formatters.py
tests/test_datastores/: test_mongo.py  test_redis.py
tests/test_os/: test_core.py  test_shell.py
tests/test_text/: test_template.py
